# qrflow

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: copy_zbar.py  rewrite_tag.py
src/qrflow/: __init__.py  _zbar_init.py  cli.py  main.py
src/qrflow/api/: exceptions.py  lifespan.py
src/qrflow/api/routes/: crop.py  detect.py  pages.py  process.py  upload.py
src/qrflow/config/: __init__.py  settings.py
src/qrflow/core/: __init__.py  models.py  pipeline.py  protocols.py
src/qrflow/core/enhance/: __init__.py  base.py  binarize.py  contrast.py  denoise.py  morphology.py  perspective.py  raw.py  registry.py  super_res.py
src/qrflow/core/recognize/: __init__.py  base.py  opencv_backend.py  pyzbar_backend.py  registry.py  wechat_backend.py  zxing_backend.py
src/qrflow/core/reconstruct/: deduplicate.py  generator.py
src/qrflow/static/: style.css
src/qrflow/templates/: index.html
src/qrflow/utils/: bbox.py  image.py
static/: style.css
templates/: index.html
tests/: conftest.py  test_cli.py
tests/test_api/: test_routes.py
tests/test_core/: test_pipeline.py
tests/test_core/test_enhance/: test_steps.py
tests/test_core/test_recognize/: test_backends.py
tests/test_core/test_reconstruct/: test_reconstruct.py
tests/test_utils/: test_utils.py
